tests/snapshots/snapshot_ir_translations__kimi_ir__kimi_ir_roundtrip_request.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&back"
---
{
  "model": "moonshot-v1-8k",
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "Translate: goodbye"
        }
      ]
    }
  ],
  "config": {}
}
