tests/snapshots/snapshot_ir_translations__kimi_ir__kimi_minimal_request_to_ir.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&ir"
---
{
  "model": "moonshot-v1-8k",
  "messages": [
    {
      "role": "user",
      "content": [
        {
          "type": "text",
          "text": "Hello"
        }
      ]
    }
  ],
  "config": {}
}
