tests/snapshots/snapshot_ir_translations__kimi_ir__kimi_stream_chunk_to_ir.snap
---
source: tests/snapshot_ir_translations.rs
expression: "&ir_events"
---
[
  {
    "type": "stream_start",
    "id": "chunk-01",
    "model": "moonshot-v1-8k"
  },
  {
    "type": "text_delta",
    "index": 0,
    "text": "你好"
  }
]
